Fix service card alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ a {
     color: var(--orange);
 }
 
-a:hover {
+a:hover:not(.button) {
     color: var(--dark-blue);
 }
 
@@ -254,12 +254,11 @@ nav a {
 
 .service-card {
     width: 300px;
-    height: 405px;
+    height: 425px;
     box-shadow: 3px 5px 5px 5px rgba(187, 187, 187, 0.5);
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
-    padding-bottom: 50px;
     margin-bottom: 60px;
 }
 
@@ -278,7 +277,7 @@ nav a {
 .price {
     font-size: 1.8rem;
     color: var(--orange);
-    margin: 3px auto 0 auto;
+    margin: 3px auto 20px auto;
 }
 
 /* ================================= 
